Add more vlidation for door ajar, updates pssmlt with heat map

--- a/validation/index.html
+++ b/validation/index.html
@@ -29,6 +29,20 @@
                     <br/>
                     Cornelbox
                 </div>
+                <div class="report-preview">
+                    <a href="scenes/door-ajar/index.html">
+                        <img class="report-thumb" src="scenes/door-ajar/thumb.png"/>
+                    </a>
+                    <br/>
+                    Door ajar
+                </div>
+                <div class="report-preview">
+                    <a href="scenes/door-ajar-diffuse/index.html">
+                        <img class="report-thumb" src="scenes/door-ajar-diffuse/thumb.png"/>
+                    </a>
+                    <br/>
+                    Door ajar diffuse
+                </div>
             </div>
         </div>
     </body>
